--- a/client/front-office/src/index.css
+++ b/client/front-office/src/index.css
@@ -1,7 +1,8 @@
 html, body, #root {
-    /*display: flex;
-    flex: 1 0 auto;
-    */
     height: 100%;
     width: 100%;
+}
+
+#footerSpace{
+    justify-content:space-between;
 }
