--- a/client/front-office/src/index.css
+++ b/client/front-office/src/index.css
@@ -9,4 +9,15 @@ html, body, #root {
 
 .bg-opacity-85 {
     --tw-bg-opacity: 0.85;
+}
+
+.bg-secondary-green{
+    --tw-bg-opacity: 1;
+    background-color:rgb(156 209 101 / var(--tw-bg-opacity));
+    border-color: rgb(156 209 101 / var(--tw-bg-opacity));   
+}
+
+.hover\:bg-.bg-secondary-green{
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
