--- a/client/front-office/src/output.css
+++ b/client/front-office/src/output.css
@@ -3051,6 +3051,14 @@ html {
   margin-left: 0.5rem;
 }
 
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mr-12 {
+  margin-right: 3rem;
+}
+
 .block {
   display: block;
 }
@@ -3106,6 +3114,10 @@ html {
 
 .justify-start {
   justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -3205,16 +3217,6 @@ html {
   }
 
   .sm\:hidden {
-    display: none;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:flex {
-    display: flex;
-  }
-
-  .md\:hidden {
     display: none;
   }
 }
