aggiunte card sono MOLTO FELICIO

--- a/server/src/back-office/components/SideBar.html
+++ b/server/src/back-office/components/SideBar.html
@@ -1,8 +1,8 @@
 <div
-    class="bg-transparent p-5 dark:bg-slate-900 relative  rounded-lg"
+    class="bg-transparent dark:bg-slate-900 relative rounded-lg"
 >
     <nav
-    class="flex self-center relative shrink-0 grow-0 justify-around gap-4 border-t border-gray-200 bg-white/50 p-2.5 shadow-lg backdrop-blur-lg dark:border-slate-600/60 dark:bg-slate-800/50 top-2/4 -translate-y-2/4  min-h-[auto] min-w-[64px] flex-row md:flex-col rounded-lg border"
+    class="flex relative flex-row-reverse md:flex-col shrink-0 grow-0 justify-around gap-4 border-t border-gray-200 bg-white/50 p-2.5 shadow-lg backdrop-blur-lg dark:border-slate-600/60 dark:bg-slate-800/50 top-2/4 -translate-y-2/4  min-h-[auto] min-w-[64px] rounded-lg border"
     >
     <a
         href="#profile"
