--- a/server/src/back-office/components/PresentationPage.html
+++ b/server/src/back-office/components/PresentationPage.html
@@ -1,3 +1,86 @@
-<div class="flex flex-col w-full ">
-  <div class="text-center font-bold text-xl" style="flex: 1 1 auto">Welcome to the place where you can manage your own company!</div>
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script>
+    let services1 = [
+      {
+        text: "Organize your customers information",
+        img: "../public/customers.png",
+      },
+      {
+        text: "Manage public forum posts",
+        img: "../public/customers.png",
+      },
+      {
+        text: "Sell or delete products in your eCommerce",
+        img: "../public/customers.png",
+      },
+    ];
+    let services2 = [
+      {
+        text: "Manage prenotations info as prices and schedules",
+        img: "../public/customers.png",
+      },
+      {
+        text: "Billing and analytics",
+        img: "../public/customers.png",
+      },
+      {
+        text: "Manage online services",
+        img: "../public/customers.png",
+      },
+    ];
+
+    let tmp = "";
+    $(document).ready(function () {
+      services1.map( (item) => {
+        tmp +=
+          `<a class="card">
+            <div
+            class="card-body bg-white"
+            class="hover:animate-pulse"
+            style="padding: 2rem; margin: 1rem"
+            >
+        <p class="card-title">` +
+          item.text +
+          `</p>
+        <img
+        src=` +
+          item.img +
+          `
+        alt="ALT"
+        class="h-full w-full object-cover object-center group-hover:opacity-75"
+        />
+        </div>
+        </a>`;
+        $("#cards").html(tmp);
+      }
+    )});
+  </script>
+</head>
+<div class="flex self-center flex-col w-full">
+  <div class="flex flex-col text-center bg-[#826C7F] p-3 md:p-6 rounded-lg">
+    <div class="primary font-bold text-2xl md:text-6xl">
+      Welcome to the place where you can manage your own company!
+    </div>
+  </div>
+  <!--div class="flex justify-center primary font-semibold">Here anything you can do! </div-->
+
+  <div id="cards" class="grid grid-cols-2 xl:grid-cols-3"></div>
+
+  <!--div class="grid grid-cols-2 xl:grid-cols-3">
+    <a v-for="game in games" :key="game.id" :href="game.href" class="card">
+      <div
+        :class="[game.bg, 'card-body']"
+        class="hover:animate-pulse"
+        style="padding: 2rem; margin: 1rem"
+      >
+        <p class="card-title hidden">{{ game.name }}</p>
+        <img
+          :src="game.imageSrc"
+          :alt="game.imageAlt"
+          class="h-full w-full object-cover object-center group-hover:opacity-75"
+        />
+      </div>
+    </a>
+  </div-->
 </div>
