--- a/server/src/back-office/components/PresentationPage.html
+++ b/server/src/back-office/components/PresentationPage.html
@@ -22,7 +22,7 @@
       },
       {
         text: "Billing and analytics",
-        img: "../public/analytics.png",
+        img: "../public/billing.png",
       },
       {
         text: "Manage online services",
