--- a/server/src/back-office/components/PresentationPage.html
+++ b/server/src/back-office/components/PresentationPage.html
@@ -40,7 +40,7 @@
         tmp +=
           `<a class="card flex space-between">
             <div
-            class="card-body bg-[#cba9b6] hover:animate-pulse"
+            class="card-body bg-[#cba9b6] hover:bg-opacity-50"
             style="padding-left: 3rem; padding-right: 3rem; padding-top:3rem; max-height: 18rem; max-width: 18rem; margin:0.5rem"
             >
         <img
