--- a/server/src/back-office/components/PresentationPage.html
+++ b/server/src/back-office/components/PresentationPage.html
@@ -6,31 +6,37 @@
         text: "customers",
         img: "../public/customers.png",
         alt: "customers icon",
+        href: "",
       },
       {
         text: "forum",
         img: "../public/forum.png",
         alt: "forum icon",
+        href: "",
       },
       {
         text: "e-commerce",
         img: "../public/shop.png",
         alt: "shop icon",
+        href: "",
       },
       {
         text: "schedules",
         img: "../public/schedule.png",
         alt: "prenotation icon",
+        href: "",
       },
       {
         text: "Billing",
         img: "../public/billing.png",
         alt: "billing icon",
+        href: "",
       },
       {
         text: "videocalls",
         img: "../public/videocall.png",
         alt: "online services icon",
+        href: "",
       },
     ];
 
