--- a/server/src/back-office/components/Login.html
+++ b/server/src/back-office/components/Login.html
@@ -1,102 +1,124 @@
-<section class="h-full flex justify-center gradient-form bg-gray-200 md:h-screen">
-  <div class="container py-6 sm:py-12 px-6 h-full">
-    <div
-      class="flex justify-center items-center flex-wrap h-full g-6 text-gray-800"
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script type="text/javascript" src="script/index.js"></script>
+    <title>CasAnimale - Login </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <!--script src="../../node_modules/jquery/dist/jquery.min.js"></script-->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <script></script>
+  </head>
+
+  <body>
+    <section
+      class="h-full flex justify-center gradient-form bg-gray-200 md:h-screen"
     >
-      <div class="xl:w-10/12">
-        <div class="block bg-white shadow-lg rounded-lg">
-          <div class="lg:flex lg:flex-wrap g-0">
-            <div class="lg:w-6/12 px-4 md:px-0">
-              <div class="md:p-12 md:mx-6">
-                <div class="text-center">
-                  <img
-                    class="mx-auto w-40"
-                    src="../public/animal-house.png"
-                    alt="logo"
-                  />
-                  <h4 class="text-xl font-semibold mt-4 mb-12 pb-1">
-                    CasAnimale - Back Office
-                  </h4>
+      <div class="container py-6 sm:py-12 px-6 h-full">
+        <div
+          class="flex justify-center items-center flex-wrap h-full g-6 text-gray-800"
+        >
+          <div class="xl:w-10/12">
+            <div class="block bg-white shadow-lg rounded-lg">
+              <div class="lg:flex lg:flex-wrap g-0">
+                <div class="lg:w-6/12 px-4 md:px-0">
+                  <div class="md:p-12 md:mx-6">
+                    <div class="text-center">
+                      <img
+                        class="mx-auto w-40"
+                        src="../public/animal-house.png"
+                        alt="logo"
+                      />
+                      <h4 class="text-xl font-semibold mt-4 mb-12 pb-1">
+                        CasAnimale - Back Office
+                      </h4>
+                    </div>
+                    <form>
+                      <p class="mb-4">Please login to your account</p>
+                      <div class="mb-4">
+                        <input
+                          type="text"
+                          class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                          id="usernameTab"
+                          placeholder="Username"
+                        />
+                      </div>
+                      <div class="mb-4">
+                        <input
+                          type="password"
+                          class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                          id="passwordTab"
+                          placeholder="Password"
+                        />
+                      </div>
+                      <div class="text-center pt-1 mb-12 pb-1">
+                        <button
+                          id="loginButton"
+                          class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3"
+                          type="button"
+                          data-mdb-ripple="true"
+                          data-mdb-ripple-color="light"
+                          style="
+                            background: linear-gradient(
+                              to right,
+                              #eba9b6,
+                              #e0b2bd,
+                              #c4a9b4,
+                              #c798a4
+                            );
+                          "
+                        >
+                          Log in
+                        </button>
+                        <a class="text-gray-500" href="#!">Forgot password?</a>
+                      </div>
+                      <div class="flex items-center justify-between pb-6">
+                        <p class="mb-0 mr-2">Don't have an account?</p>
+                        <button
+                          type="button"
+                          class="inline-block px-6 py-2 border-2 border-[#863d56] text-[#863d56] font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
+                          data-mdb-ripple="true"
+                          data-mdb-ripple-color="light"
+                        >
+                          register
+                        </button>
+                      </div>
+                    </form>
+                  </div>
                 </div>
-                <form>
-                  <p class="mb-4">Please login to your account</p>
-                  <div class="mb-4">
-                    <input
-                      type="text"
-                      class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                      id="exampleFormControlInput1"
-                      placeholder="Username"
-                    />
+                <div
+                  class="lg:w-6/12 flex items-center lg:rounded-r-lg rounded-b-lg lg:rounded-bl-none"
+                  style="
+                    background: linear-gradient(
+                      to right,
+                      #eba9b6,
+                      #e0b2bd,
+                      #cba9b6,
+                      #c798a4
+                    );
+                  "
+                >
+                  <div class="text-white px-4 py-6 md:p-12 md:mx-6">
+                    <h4 class="text-xl font-semibold mb-6">
+                      We are more than just a company
+                    </h4>
+                    <p class="text-sm">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
                   </div>
-                  <div class="mb-4">
-                    <input
-                      type="password"
-                      class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                      id="exampleFormControlInput1"
-                      placeholder="Password"
-                    />
-                  </div>
-                  <div class="text-center pt-1 mb-12 pb-1">
-                    <button
-                      class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3"
-                      type="button"
-                      data-mdb-ripple="true"
-                      data-mdb-ripple-color="light"
-                      style="
-                        background: linear-gradient(
-                          to right,
-                          #eba9b6,
-                          #e0b2bd,
-                          #c4a9b4,
-                          #c798a4
-                        );
-                      "
-                    >
-                      Log in
-                    </button>
-                    <a class="text-gray-500" href="#!">Forgot password?</a>
-                  </div>
-                  <div class="flex items-center justify-between pb-6">
-                    <p class="mb-0 mr-2">Don't have an account?</p>
-                    <button
-                      type="button"
-                      class="inline-block px-6 py-2 border-2 border-[#863d56] text-[#863d56] font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
-                      data-mdb-ripple="true"
-                      data-mdb-ripple-color="light"
-                    >
-                      register
-                    </button>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <div
-              class="lg:w-6/12 flex items-center lg:rounded-r-lg rounded-b-lg lg:rounded-bl-none"
-              style="
-                background: linear-gradient(
-                  to right,
-                  #eba9b6,
-                  #e0b2bd,
-                  #cba9b6,
-                  #c798a4
-                );
-              "
-            >
-              <div class="text-white px-4 py-6 md:p-12 md:mx-6">
-                <h4 class="text-xl font-semibold mb-6">
-                  We are more than just a company
-                </h4>
-                <p class="text-sm">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
+  </body>
+</html>
