schedules page bo

--- a/server/src/back-office/components/prenotation-list.html
+++ b/server/src/back-office/components/prenotation-list.html
@@ -30,13 +30,31 @@
       duration: 1,
       user: "635d00fdc77f11a1f22d313d",
     },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
+    {
+      place: "Lugo",
+      start: "2023-02-06T09:00:00.000Z",
+      duration: 1,
+      user: "635d00fdc77f11a1f22d313d",
+    },
   ];
   let tmp = "";
   $(document).ready(function () {
     pts.map((item, index) => {
       tmp +=
         `
-          <div class="flex flex-row m-3 flex-1">` +
+          <div class="flex flex-row my-3 flex-1">` +
         (index + 1) +
         `.
               <div class="flex flex-col flex-1 bg-white p-2">
